[package]
name = "gmime-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.gmime_3_0]
name = "gmime-3.0"
version = "1.30"

[package.metadata.system-deps.gmime_3_0.v3_2]
version = "3.2"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gmime_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v3_2 = []
dox = ["glib/dox", "gobject/dox", "gio/dox"]
